# libborr

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build-and-test.yml
cmake/: format_support.cmake  resources.cmake  resources.hpp.in
include/borr/: extensions.hpp  language.hpp  langversion.hpp  string_splitter.hpp
reference/: CMakeLists.txt
reference/resources/: de_DE.borr  en_GB.borr
reference/src/: Main.cpp
src/: language.cpp
test/: CMakeLists.txt
test/src/: ExtensionsTests.cpp  LanguageClassTests.cpp  SpliteratorTests.cpp  TestMain.cpp
